@@ -13,6 +13,7 @@ ENH: Ticket#623 - TMemCache to support multiple servers (Carl)
 ENH: Ticket#664 - Added support to styling thead, tbody, tfoot of TDataGrid (Qiang)
 ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Ticket#672 - ForceSecureConnection to THttpRequest (Carl)
+ENH: Ticket#676 - Updated ActiveRecord Oracle Drives (Qiang)
 ENH: Ticket#678 - Improved DateTimeFormatInfo performance (Stever)
 ENH: Ticket#681 - TUrlMapping can construct custom URLs now (Qiang)
 ENH: Added THead requirement check (Qiang)
